--- a/package.json
+++ b/package.json
@@ -2,23 +2,19 @@
     "name": "somwhatgoogle-api",
     "version": "3.2.0",
     "type": "module",
+    "main": "index.js",
     "scripts": {
-        "dev": "NODE_ENV=development node index.js",
-        "dev-memory": "NODE_OPTIONS=\"--max-old-space-size=4096\" NODE_ENV=development node index.js",
-        "prod": "NODE_ENV=production node index.js",
-        "prod-memory": "NODE_OPTIONS=\"--max-old-space-size=4096\" NODE_ENV=production node index.js",
-        "start": "node index.js",
-        "render-start": "NODE_OPTIONS=\"--max-old-space-size=512\" node index.js"
+        "start": "node index.js"
     },
     "dependencies": {
-        "cheerio": "^1.0.0-rc.12",
-        "cors": "^2.8.5",
-        "dotenv": "^17.2.3",
         "express": "^4.18.2",
+        "cheerio": "^1.0.0-rc.12",
+        "node-fetch": "^3.3.2",
+        "cors": "^2.8.5",
         "helmet": "^7.1.0",
-        "node-fetch": "^3.3.2"
+        "dotenv": "^16.3.1"
     },
     "engines": {
-        "node": ">=16.0.0"
+        "node": ">=18.0.0"
     }
 }
