--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "somwhatgoogle-api",
     "version": "3.2.0",
     "type": "module",
-    "main": "index.js",
+    "main": "src/index.js",
     "scripts": {
         "start": "node index.js"
     },
